<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:orientation="vertical" tools:context="com.kartik.geoquiz.MainActivity">

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="TextView"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:padding="24dp"
        android:textColor="?android:attr/textColorLink" android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/trueButton"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/true_button"/>
        <Button
            android:id="@+id/falseButton"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/false_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:padding="4dp">
        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:src="@drawable/arrow_left"
            android:contentDescription="@string/prev_button"/>
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:src="@drawable/arrow_right" android:contentDescription="@string/next_button"/>
    </LinearLayout>
    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/current_score"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/reset_button"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/cheatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/cheat_button"/>

</LinearLayout>

    <!--style="?android:attr/borderlessButtonStyle"-->
